🐛 Fix Z-index

--- a/src/components/main.css
+++ b/src/components/main.css
@@ -9,6 +9,7 @@ body {
     cursor: url("../images/cursor.png"), auto;
     transition: .2s;
     user-select: none;
+    z-index: -1000;
 }
 ::selection {
     background: white;
@@ -115,7 +116,7 @@ footer a {
     position: absolute;
     width: 100%;
     height: 100%;
-    z-index: 1000;
+    z-index: -100;
 }
 .screen-on-load .block {
     width: 100%;
@@ -144,15 +145,15 @@ footer a {
 @keyframes fadein {
     65% {opacity: 0%;}
     80% {opacity: 100%;}
-    100% {opacity: 100%; z-index: -10;}
+    100% {opacity: 100%;}
 }
 @keyframes fadeout-logo {
     60% {opacity: 100%;}
-    100% {opacity: 0%; z-index: -10;}
+    100% {opacity: 0%;}
 }
 @keyframes slideout {
     75% {width: 100%;}
-    100% {width: 0%; z-index: -10;}
+    100% {width: 0%;}
 }
 @media screen and (max-width: 1100px) {
     .right_image-container {
